--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "monportfolio",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "email": "stephuni35@gmail.com",
+    "name": "Stephane Mfuni",
+    "url": "https://stephane-mfuni.vercel.app/"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
